sna: Free the released COW reference when uncloning

Reported-by: Jiri Slaby <jirislaby@gmail.com>
Reported-by: David Gow <david@ingeniumdigital.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=64978
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>